--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@
 		<p class="footer-info">TEL：00-0000-0000</p>
 		<p class="footer-info">FAX：00-0000-0000</p>
 		<div class="footer-social">
-			<a href="#" aria-label="Instagram">
+			<!-- <a href="#" aria-label="Instagram">
 				<span class="social-icon">Instagram</span>
 			</a>
 			<a href="#" aria-label="YouTube">
@@ -15,7 +15,7 @@
 			</a>
 			<a href="#" aria-label="X">
 				<span class="social-icon">X</span>
-			</a>
+			</a> -->
 		</div>
 		<a class="footer-policy" href="/privacy-policy">プライバシーポリシー</a>
 		<p class="footer-copy">©2026 〇〇寺　All rights reserved</p>
