--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,6 +13,7 @@
 			<ul class="nav-list">
 				<li><a href="/#overview">概要</a></li>
 				<li><a href="/news">お知らせ</a></li>
+				<li><a href="/events">年間行事</a></li>
 				<li><a href="/access">アクセス</a></li>
 				<li><a href="/contact">お問い合わせ</a></li>
 			</ul>
